--- a/stylesheets/hack4ac.css
+++ b/stylesheets/hack4ac.css
@@ -18,3 +18,20 @@
     font-size: 22px;
     margin-bottom:12px;
 }
+
+.sponsors {
+    margin: 25px 0;
+    color: #333;
+}
+
+.sponsors h3 {
+    font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+    font-size: 22px;
+    margin-bottom:12px;
+}
+
+.sponsors div {
+    font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+    font-size: 16px;
+    margin-bottom: 24px;
+}
